--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,31 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Barlow&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-:root{
-    --primary-color:#EE4036
+:root {
+  --primary-color: #ee4036;
 }
-html{
-    color-scheme: light dark;
-    height: 100%;
+html {
+  color-scheme: light dark;
+  height: 100%;
 }
 @font-face {
-    font-family: FONTS;
-    /* src: url(./fonts/Barlow/Barlow-Regular.ttf); */
-    src: url(./fonts/Barlow/Barlow-BoldItalic.ttf);
+  font-family: FONTS;
+  /* src: url(./fonts/Barlow/Barlow-Regular.ttf); */
+  src: url(./fonts/Barlow/Barlow-BoldItalic.ttf);
 }
-body{
+body {
   /*     font-family: FONTS; */
-      font-family: 'Barlow', sans-serif;
-      background-color: black;
-      font-weight: bold;
-      height: 100%;
-  }
-
+  font-family: "Barlow", sans-serif;
+  background-color: black;
+  font-weight: bold;
+  height: 100%;
+}
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
